added percent scores analysis

--- a/create_experiment_metadata.ipynb
+++ b/create_experiment_metadata.ipynb
@@ -20,9 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#col_order = ['Vendor','Batch','Plate_Map_Name','Assay_Plate_Barcode','Magnification','Objective_NA','Binning','Images_per_well','z_plane','Number_of_channels','Anomaly']\n",
-    "col_order = ['Vendor','Batch','Plate_Map_Name','Assay_Plate_Barcode','Binning','Number_of_channels','Anomaly']\n",
-    "        "
+    "col_order = ['Vendor','Batch','Plate_Map_Name','Assay_Plate_Barcode','Binning','Number_of_channels','Anomaly']        "
    ]
   },
   {
@@ -2191,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "80bfb958",
+   "id": "7ea28064",
    "metadata": {},
    "outputs": [],
    "source": [
