enabling saving in enabling sphering

--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2265,13 +2265,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 325,
    "metadata": {},
    "outputs": [
@@ -3107,9 +3100,11 @@
     "        rep_df = pd.concat(rep_df_list, ignore_index=True)\n",
     "    if match_or_rep_or_both.casefold() == \"matching\" or match_or_rep_or_both.casefold() == \"both\":\n",
     "        match_df = pd.concat(match_df_list, ignore_index=True)\n",
+    "    \n",
+    "    if outfile is not None:\n",
+    "        dropout_df.to_csv(outfile,index=False)\n",
     "                \n",
-    "    # Merge metadata with output dataframes\n",
-    "    # merge_columns = [\"assay_plate_barcode\", \"num_features\", \"dropout\", \"remaining\", \"n_columns\", \"sphering\"]\n",
+    "    # Merge so perc rep and match is in the same place\n",
     "    if match_or_rep_or_both.casefold() == \"both\":\n",
     "        return rep_df.merge(match_df, how=\"inner\")\n",
     "    if match_or_rep_or_both.casefold() == \"replicating\":\n",
