--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
        "55                9       12         15    none  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,9 +1572,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (2590682113.py, line 98)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [4]\u001b[0;36m\u001b[0m\n\u001b[0;31m    # df\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def create_moa_dataframe(experiment_metadata, profile_parent_dir, batch_col=\"Batch\", match_or_rep_or_both=\"replicating\", enable_sphering=\"both\"):\n",
     "    \"\"\"\n",
@@ -1670,7 +1679,7 @@
     "    elif match_or_rep_or_both.casefold() == \"matching\":\n",
     "        return experiment_metadata.merge(corr_matching_df, how=\"inner\", on=merge_columns)\n",
     "\n",
-    "# df_replicating, df_matching = create_moa_dataframe(pd.read_csv('output/experiment-metadata.tsv', sep='\\t'), \"../jump-scope/profiles/\", match_or_rep_or_both=\"both\", enable_sphering=\"both\")\n",
+    "df_replicating, df_matching = create_moa_dataframe(experiment_df, \"../jump-scope/profiles/\", match_or_rep_or_both=\"both\", enable_sphering=\"both\")\n",
     "# df = create_moa_dataframe(pd.read_csv('output/experiment-metadata.tsv', sep='\\t'), \"../jump-scope/profiles/\", match_or_rep_or_both=\"replicating\", enable_sphering=\"no\")\n",
     "\n",
     "# df\n"
@@ -2753,10 +2762,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already tried ['()', \"('Nuclei',)\"]. Skipping\n",
+      "All combinations already computed\n"
+     ]
+    }
+   ],
    "source": [
+    "### Creating dropout datasets + matrix\n",
     "\n",
     "def return_prop95(dataframe, match_or_rep=\"replicating\", enable_sphering=False):\n",
     "    \"\"\"\n",
@@ -2791,123 +2810,9 @@
     "            matching_corr = list(utils.corr_between_perturbation_pairs(plate_df, 'Metadata_moa', 'Metadata_broad_sample'))\n",
     "            null_matching = list(utils.corr_between_perturbation_non_pairs(plate_df, n_samples=n_samples, metadata_common=metadata_common, metadata_perturbation=metadata_perturbation))\n",
     "            prop_95_matching, _ = utils.percent_score(null_matching, matching_corr, how='right')\n",
-    "            return prop_95_matching\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---- Dropping: (). Remaining: ['Nuclei'] ----\n",
-      "---- Dropping: ('Nuclei',). Remaining: [] ----\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>assay_plate_barcode</th>\n",
-       "      <th>num_features</th>\n",
-       "      <th>dropout</th>\n",
-       "      <th>remaining</th>\n",
-       "      <th>n_columns</th>\n",
-       "      <th>sphering</th>\n",
-       "      <th>percent_replicating</th>\n",
-       "      <th>percent_matching</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
-       "      <td>459</td>\n",
-       "      <td>()</td>\n",
-       "      <td>['Nuclei']</td>\n",
-       "      <td>4357</td>\n",
-       "      <td>True</td>\n",
-       "      <td>45.555556</td>\n",
-       "      <td>11.627907</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
-       "      <td>459</td>\n",
-       "      <td>()</td>\n",
-       "      <td>['Nuclei']</td>\n",
-       "      <td>4357</td>\n",
-       "      <td>False</td>\n",
-       "      <td>13.333333</td>\n",
-       "      <td>4.651163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
-       "      <td>337</td>\n",
-       "      <td>('Nuclei',)</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2909</td>\n",
-       "      <td>True</td>\n",
-       "      <td>42.222222</td>\n",
-       "      <td>11.627907</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
-       "      <td>337</td>\n",
-       "      <td>('Nuclei',)</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2909</td>\n",
-       "      <td>False</td>\n",
-       "      <td>11.111111</td>\n",
-       "      <td>6.976744</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          assay_plate_barcode  num_features      dropout   remaining  \\\n",
-       "0  Plate2_PCO_6ch_4site_10XPA           459           ()  ['Nuclei']   \n",
-       "1  Plate2_PCO_6ch_4site_10XPA           459           ()  ['Nuclei']   \n",
-       "2  Plate2_PCO_6ch_4site_10XPA           337  ('Nuclei',)          []   \n",
-       "3  Plate2_PCO_6ch_4site_10XPA           337  ('Nuclei',)          []   \n",
-       "\n",
-       "   n_columns  sphering  percent_replicating  percent_matching  \n",
-       "0       4357      True            45.555556         11.627907  \n",
-       "1       4357     False            13.333333          4.651163  \n",
-       "2       2909      True            42.222222         11.627907  \n",
-       "3       2909     False            11.111111          6.976744  "
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### Creating dropout datasets + matrix\n",
+    "            return prop_95_matching\n",
+    "\n",
+    "\n",
     "def do_feature_select(plate_df):\n",
     "    \"\"\"\n",
     "    Find the column names that are CellProfiler features. Eg. column names\n",
@@ -3010,6 +2915,23 @@
     "    possible_combinations = [y for x in range(len(category_list)+1) for y in list(set(itertools.combinations(category_list,x)))]\n",
     "    rep_df_list = list()\n",
     "    match_df_list = list()\n",
+    "\n",
+    "    # Check if dropout has previously been performed\n",
+    "    if os.path.exists(outfile):\n",
+    "        dropout_df = pd.read_csv(outfile)\n",
+    "        tried=list(dropout_df[\"dropout\"])\n",
+    "        print(f\"Already tried {tried}. Skipping.\")\n",
+    "        possible_combinations = [x for x in possible_combinations if str(x) not in tried]\n",
+    "        # Otherwise, dropout columns will be generated from scratch\n",
+    "    else:\n",
+    "        dropout_df = pd.DataFrame()\n",
+    "        \n",
+    "    if len(possible_combinations) == 0:\n",
+    "        # Either no combinations available or they're already present in the \n",
+    "        # outfile\n",
+    "        print(\"All combinations already computed\")\n",
+    "        return\n",
+    "\n",
     "    # Iterate through the combination to dropout\n",
     "    for dropout_group in possible_combinations: \n",
     "        col_list = input_columns\n",
@@ -3079,16 +3001,20 @@
     "        rep_df = pd.concat(rep_df_list, ignore_index=True)\n",
     "    if match_or_rep_or_both.casefold() == \"matching\" or match_or_rep_or_both.casefold() == \"both\":\n",
     "        match_df = pd.concat(match_df_list, ignore_index=True)\n",
-    "    \n",
-    "    if outfile is not None:\n",
-    "        dropout_df.to_csv(outfile,index=False)\n",
     "                \n",
     "    # Merge so perc rep and match is in the same place\n",
     "    if match_or_rep_or_both.casefold() == \"both\":\n",
-    "        return rep_df.merge(match_df, how=\"inner\")\n",
+    "        merged_df = rep_df.merge(match_df, how=\"inner\")\n",
+    "        if outfile is not None:\n",
+    "            merged_df.to_csv(outfile,index=False)\n",
+    "        return merged_df\n",
     "    if match_or_rep_or_both.casefold() == \"replicating\":\n",
+    "        if outfile is not None:\n",
+    "            rep_df.to_csv(outfile,index=False)\n",
     "        return rep_df\n",
-    "    elif match_or_rep_or_both.casefold() == \"matching\":\n",
+    "    if match_or_rep_or_both.casefold() == \"matching\":\n",
+    "        if outfile is not None:\n",
+    "            match_df.to_csv(outfile,index=False)\n",
     "        return match_df\n",
     "\n",
     "    # if outfile is not None:\n",
@@ -3104,18 +3030,44 @@
     "\n",
     "test_data = pd.read_csv(load_file)\n",
     "\n",
-    "category_dropout(test_data, \"Plate2_PCO_6ch_4site_10XPA\", [\"Nuclei\"], \"both\", \"both\", \"test.csv\")\n",
+    "drops = category_dropout(test_data, \"Plate2_PCO_6ch_4site_10XPA\", [\"Nuclei\"], \"replicating\", \"no\", \"test.csv\")\n",
     "\n",
     "# ['Nuclei','Cells','Cytoplasm']\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             ()\n",
+       "1    ('Nuclei',)\n",
+       "Name: dropout, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drops[\"dropout\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "73b280186f56a0e7e1261797cbe1e0ce90ada53c728d4589dcde7f990cc23cb6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('jump-scope')",
+   "display_name": "Python 3.8.13 ('jump-scope': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -3131,7 +3083,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "18f47f3723cf2fddf1495de94a3c5370dabc4cbabc5b6bd6a88b9f69f9e68cc0"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
