adding try-except to handle sphering NaN errors on longer runs

--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2924,58 +2924,69 @@
     "        dropped_dataframe = dataframe[col_list]\n",
     "        feature_select = do_feature_select(dropped_dataframe)\n",
     "        # return feature_select\n",
-    "        if match_or_rep_or_both.casefold() == \"replicating\" or match_or_rep_or_both.casefold() == \"both\":\n",
-    "            if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
-    "                prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=True)\n",
-    "                _df = pd.DataFrame({\n",
-    "                    \"assay_plate_barcode\": plate_barcode,\n",
-    "                    \"num_features\": len(feature_select.columns),\n",
-    "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
-    "                    \"n_columns\": len(col_list),\n",
-    "                    \"sphering\": True,\n",
-    "                    \"percent_replicating\": [prop_95]\n",
-    "                })\n",
-    "                rep_df_list.append(_df)\n",
-    "            if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
-    "                prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=False)\n",
-    "                _df = pd.DataFrame({\n",
-    "                    \"assay_plate_barcode\": plate_barcode,\n",
-    "                    \"num_features\": len(feature_select.columns),\n",
-    "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
-    "                    \"n_columns\": len(col_list),\n",
-    "                    \"sphering\": False,\n",
-    "                    \"percent_replicating\": [prop_95]\n",
-    "                })\n",
-    "                rep_df_list.append(_df)\n",
-    "        if match_or_rep_or_both.casefold() == \"matching\" or match_or_rep_or_both.casefold() == \"both\":\n",
-    "            if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
-    "                prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=True)\n",
-    "                _df = pd.DataFrame({\n",
-    "                    \"assay_plate_barcode\": plate_barcode,\n",
-    "                    \"num_features\": len(feature_select.columns),\n",
-    "                    \"percent_matching\": [prop_95],\n",
-    "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
-    "                    \"n_columns\": len(col_list),\n",
-    "                    \"sphering\": True,\n",
-    "                    \"percent_matching\": [prop_95]\n",
-    "                })\n",
-    "                match_df_list.append(_df)\n",
-    "            if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
-    "                prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=False)\n",
-    "                _df = pd.DataFrame({\n",
-    "                    \"assay_plate_barcode\": plate_barcode,\n",
-    "                    \"num_features\": len(feature_select.columns),\n",
-    "                    \"percent_matching\": [prop_95],\n",
-    "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
-    "                    \"n_columns\": len(col_list),\n",
-    "                    \"sphering\": False,\n",
-    "                    \"percent_matching\": [prop_95],\n",
-    "                })\n",
-    "                match_df_list.append(_df)\n",
+    "        try:\n",
+    "            if match_or_rep_or_both.casefold() == \"replicating\" or match_or_rep_or_both.casefold() == \"both\":\n",
+    "                if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
+    "                    prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=True)\n",
+    "                    _df = pd.DataFrame({\n",
+    "                        \"assay_plate_barcode\": plate_barcode,\n",
+    "                        \"num_features\": len(feature_select.columns),\n",
+    "                        \"dropout\": str(dropout_group),\n",
+    "                        \"remaining\": str(remaining_group),\n",
+    "                        \"n_columns\": len(col_list),\n",
+    "                        \"sphering\": True,\n",
+    "                        \"percent_replicating\": [prop_95]\n",
+    "                    })\n",
+    "                    rep_df_list.append(_df)\n",
+    "                if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
+    "                    prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=False)\n",
+    "                    _df = pd.DataFrame({\n",
+    "                        \"assay_plate_barcode\": plate_barcode,\n",
+    "                        \"num_features\": len(feature_select.columns),\n",
+    "                        \"dropout\": str(dropout_group),\n",
+    "                        \"remaining\": str(remaining_group),\n",
+    "                        \"n_columns\": len(col_list),\n",
+    "                        \"sphering\": False,\n",
+    "                        \"percent_replicating\": [prop_95]\n",
+    "                    })\n",
+    "                    rep_df_list.append(_df)\n",
+    "            if match_or_rep_or_both.casefold() == \"matching\" or match_or_rep_or_both.casefold() == \"both\":\n",
+    "                if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
+    "                    prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=True)\n",
+    "                    _df = pd.DataFrame({\n",
+    "                        \"assay_plate_barcode\": plate_barcode,\n",
+    "                        \"num_features\": len(feature_select.columns),\n",
+    "                        \"dropout\": str(dropout_group),\n",
+    "                        \"remaining\": str(remaining_group),\n",
+    "                        \"n_columns\": len(col_list),\n",
+    "                        \"sphering\": True,\n",
+    "                        \"percent_matching\": [prop_95]\n",
+    "                    })\n",
+    "                    match_df_list.append(_df)\n",
+    "                if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
+    "                    prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=False)\n",
+    "                    _df = pd.DataFrame({\n",
+    "                        \"assay_plate_barcode\": plate_barcode,\n",
+    "                        \"num_features\": len(feature_select.columns),\n",
+    "                        \"dropout\": str(dropout_group),\n",
+    "                        \"remaining\": str(remaining_group),\n",
+    "                        \"n_columns\": len(col_list),\n",
+    "                        \"sphering\": False,\n",
+    "                        \"percent_matching\": [prop_95],\n",
+    "                    })\n",
+    "                    match_df_list.append(_df)\n",
+    "        except:\n",
+    "            _df = pd.DataFrame({\n",
+    "                \"assay_plate_barcode\": plate_barcode,\n",
+    "                \"num_features\": len(feature_select.columns),\n",
+    "                \"percent_matching\": 0,\n",
+    "                \"dropout\": str(dropout_group),\n",
+    "                \"remaining\": str(remaining_group),\n",
+    "                \"n_columns\": len(col_list),\n",
+    "                \"sphering\": np.nan,\n",
+    "                \"percent_matching\": [prop_95],\n",
+    "            })\n",
+    "        \n",
     "    # Concatenate the data\n",
     "    if match_or_rep_or_both.casefold() == \"replicating\" or match_or_rep_or_both.casefold() == \"both\":\n",
     "        rep_df = pd.concat(rep_df_list, ignore_index=True)\n",
