fixing pre-run checks to include the already existing data

--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2899,16 +2899,17 @@
     "    # Check if dropout has previously been performed\n",
     "    if os.path.exists(outfile):\n",
     "        dropout_df = pd.read_csv(outfile)\n",
+    "        rep_df_list.append(dropout_df)\n",
+    "        match_df_list.append(dropout_df)\n",
     "        tried=list(dropout_df[\"dropout\"])\n",
     "        print(f\"Already tried {tried}. Skipping.\")\n",
     "        possible_combinations = [x for x in possible_combinations if str(x) not in tried]\n",
     "        # Otherwise, dropout columns will be generated from scratch\n",
-    "    else:\n",
-    "        dropout_df = pd.DataFrame()\n",
-    "        \n",
+    "    # else:\n",
+    "    #     dropout_df = pd.DataFrame()\n",
+    "\n",
     "    if len(possible_combinations) == 0:\n",
-    "        # Either no combinations available or they're already present in the \n",
-    "        # outfile\n",
+    "        # Either no combinations available or they're already present in the outfile\n",
     "        print(\"All combinations already computed\")\n",
     "        return\n",
     "\n",
@@ -2924,68 +2925,64 @@
     "        dropped_dataframe = dataframe[col_list]\n",
     "        feature_select = do_feature_select(dropped_dataframe)\n",
     "        # return feature_select\n",
-    "        try:\n",
-    "            if match_or_rep_or_both.casefold() == \"replicating\" or match_or_rep_or_both.casefold() == \"both\":\n",
-    "                if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
+    "        if match_or_rep_or_both.casefold() == \"replicating\" or match_or_rep_or_both.casefold() == \"both\":\n",
+    "            if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
+    "                try:\n",
+    "                    # Added to tackle an issue where longer dropout runs would error out due to NaN input\n",
+    "                    # Unsure of the source of the NaN input. This is a temporary solution.\n",
     "                    prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=True)\n",
-    "                    _df = pd.DataFrame({\n",
-    "                        \"assay_plate_barcode\": plate_barcode,\n",
-    "                        \"num_features\": len(feature_select.columns),\n",
-    "                        \"dropout\": str(dropout_group),\n",
-    "                        \"remaining\": str(remaining_group),\n",
-    "                        \"n_columns\": len(col_list),\n",
-    "                        \"sphering\": True,\n",
-    "                        \"percent_replicating\": [prop_95]\n",
-    "                    })\n",
-    "                    rep_df_list.append(_df)\n",
-    "                if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
-    "                    prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=False)\n",
-    "                    _df = pd.DataFrame({\n",
-    "                        \"assay_plate_barcode\": plate_barcode,\n",
-    "                        \"num_features\": len(feature_select.columns),\n",
-    "                        \"dropout\": str(dropout_group),\n",
-    "                        \"remaining\": str(remaining_group),\n",
-    "                        \"n_columns\": len(col_list),\n",
-    "                        \"sphering\": False,\n",
-    "                        \"percent_replicating\": [prop_95]\n",
-    "                    })\n",
-    "                    rep_df_list.append(_df)\n",
-    "            if match_or_rep_or_both.casefold() == \"matching\" or match_or_rep_or_both.casefold() == \"both\":\n",
-    "                if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
+    "                except:\n",
+    "                    prop_95 = 0\n",
+    "                _df = pd.DataFrame({\n",
+    "                    \"assay_plate_barcode\": plate_barcode,\n",
+    "                    \"num_features\": len(feature_select.columns),\n",
+    "                    \"dropout\": str(dropout_group),\n",
+    "                    \"remaining\": str(remaining_group),\n",
+    "                    \"n_columns\": len(col_list),\n",
+    "                    \"sphering\": True,\n",
+    "                    \"percent_replicating\": [prop_95]\n",
+    "                })\n",
+    "                rep_df_list.append(_df)\n",
+    "            if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
+    "                prop_95 = return_prop95(feature_select, match_or_rep=\"replicating\", enable_sphering=False)\n",
+    "                _df = pd.DataFrame({\n",
+    "                    \"assay_plate_barcode\": plate_barcode,\n",
+    "                    \"num_features\": len(feature_select.columns),\n",
+    "                    \"dropout\": str(dropout_group),\n",
+    "                    \"remaining\": str(remaining_group),\n",
+    "                    \"n_columns\": len(col_list),\n",
+    "                    \"sphering\": False,\n",
+    "                    \"percent_replicating\": [prop_95]\n",
+    "                })\n",
+    "                rep_df_list.append(_df)\n",
+    "        if match_or_rep_or_both.casefold() == \"matching\" or match_or_rep_or_both.casefold() == \"both\":\n",
+    "            if enable_sphering.casefold() == \"yes\" or enable_sphering.casefold() == \"both\":\n",
+    "                try:\n",
     "                    prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=True)\n",
-    "                    _df = pd.DataFrame({\n",
-    "                        \"assay_plate_barcode\": plate_barcode,\n",
-    "                        \"num_features\": len(feature_select.columns),\n",
-    "                        \"dropout\": str(dropout_group),\n",
-    "                        \"remaining\": str(remaining_group),\n",
-    "                        \"n_columns\": len(col_list),\n",
-    "                        \"sphering\": True,\n",
-    "                        \"percent_matching\": [prop_95]\n",
-    "                    })\n",
-    "                    match_df_list.append(_df)\n",
-    "                if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
-    "                    prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=False)\n",
-    "                    _df = pd.DataFrame({\n",
-    "                        \"assay_plate_barcode\": plate_barcode,\n",
-    "                        \"num_features\": len(feature_select.columns),\n",
-    "                        \"dropout\": str(dropout_group),\n",
-    "                        \"remaining\": str(remaining_group),\n",
-    "                        \"n_columns\": len(col_list),\n",
-    "                        \"sphering\": False,\n",
-    "                        \"percent_matching\": [prop_95],\n",
-    "                    })\n",
-    "                    match_df_list.append(_df)\n",
-    "        except:\n",
-    "            _df = pd.DataFrame({\n",
-    "                \"assay_plate_barcode\": plate_barcode,\n",
-    "                \"num_features\": len(feature_select.columns),\n",
-    "                \"percent_matching\": 0,\n",
-    "                \"dropout\": str(dropout_group),\n",
-    "                \"remaining\": str(remaining_group),\n",
-    "                \"n_columns\": len(col_list),\n",
-    "                \"sphering\": np.nan,\n",
-    "                \"percent_matching\": [prop_95],\n",
-    "            })\n",
+    "                except:\n",
+    "                    prop_95 = 0\n",
+    "                _df = pd.DataFrame({\n",
+    "                    \"assay_plate_barcode\": plate_barcode,\n",
+    "                    \"num_features\": len(feature_select.columns),\n",
+    "                    \"dropout\": str(dropout_group),\n",
+    "                    \"remaining\": str(remaining_group),\n",
+    "                    \"n_columns\": len(col_list),\n",
+    "                    \"sphering\": True,\n",
+    "                    \"percent_matching\": [prop_95]\n",
+    "                })\n",
+    "                match_df_list.append(_df)\n",
+    "            if enable_sphering.casefold() == \"no\" or enable_sphering.casefold() == \"both\":\n",
+    "                prop_95 = return_prop95(feature_select, match_or_rep=\"matching\", enable_sphering=False)\n",
+    "                _df = pd.DataFrame({\n",
+    "                    \"assay_plate_barcode\": plate_barcode,\n",
+    "                    \"num_features\": len(feature_select.columns),\n",
+    "                    \"dropout\": str(dropout_group),\n",
+    "                    \"remaining\": str(remaining_group),\n",
+    "                    \"n_columns\": len(col_list),\n",
+    "                    \"sphering\": False,\n",
+    "                    \"percent_matching\": [prop_95],\n",
+    "                })\n",
+    "                match_df_list.append(_df)\n",
     "        \n",
     "    # Concatenate the data\n",
     "    if match_or_rep_or_both.casefold() == \"replicating\" or match_or_rep_or_both.casefold() == \"both\":\n",
