--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2751,9 +2751,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already tried ['()', \"('Nuclei',)\", \"('Cells',)\", \"('Nuclei', 'Cells')\"]. Skipping.\n",
+      "[]\n",
+      "All combinations already computed\n"
+     ]
+    }
+   ],
    "source": [
     "### Creating dropout datasets + matrix\n",
     "\n",
@@ -2904,6 +2914,7 @@
     "        tried=list(dropout_df[\"dropout\"])\n",
     "        print(f\"Already tried {tried}. Skipping.\")\n",
     "        possible_combinations = [x for x in possible_combinations if str(x) not in tried]\n",
+    "        print(possible_combinations)\n",
     "        # Otherwise, dropout columns will be generated from scratch\n",
     "    # else:\n",
     "    #     dropout_df = pd.DataFrame()\n",
@@ -2920,8 +2931,7 @@
     "        for each_item in dropout_group:\n",
     "            # Only keep columns that don't contain the dropout\n",
     "            col_list = [x for x in input_columns if each_item not in x]\n",
-    "        remaining_group = [x for x in category_list if x not in dropout_group]\n",
-    "        print(f\"---- Dropping: {dropout_group}. Remaining: {remaining_group} ----\")\n",
+    "        print(f\"---- Dropping: {dropout_group}. ----\")\n",
     "        dropped_dataframe = dataframe[col_list]\n",
     "        feature_select = do_feature_select(dropped_dataframe)\n",
     "        # return feature_select\n",
@@ -2937,7 +2947,6 @@
     "                    \"assay_plate_barcode\": plate_barcode,\n",
     "                    \"num_features\": len(feature_select.columns),\n",
     "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
     "                    \"n_columns\": len(col_list),\n",
     "                    \"sphering\": True,\n",
     "                    \"percent_replicating\": [prop_95]\n",
@@ -2949,7 +2958,6 @@
     "                    \"assay_plate_barcode\": plate_barcode,\n",
     "                    \"num_features\": len(feature_select.columns),\n",
     "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
     "                    \"n_columns\": len(col_list),\n",
     "                    \"sphering\": False,\n",
     "                    \"percent_replicating\": [prop_95]\n",
@@ -2965,7 +2973,6 @@
     "                    \"assay_plate_barcode\": plate_barcode,\n",
     "                    \"num_features\": len(feature_select.columns),\n",
     "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
     "                    \"n_columns\": len(col_list),\n",
     "                    \"sphering\": True,\n",
     "                    \"percent_matching\": [prop_95]\n",
@@ -2977,7 +2984,6 @@
     "                    \"assay_plate_barcode\": plate_barcode,\n",
     "                    \"num_features\": len(feature_select.columns),\n",
     "                    \"dropout\": str(dropout_group),\n",
-    "                    \"remaining\": str(remaining_group),\n",
     "                    \"n_columns\": len(col_list),\n",
     "                    \"sphering\": False,\n",
     "                    \"percent_matching\": [prop_95],\n",
@@ -3014,7 +3020,7 @@
     "\n",
     "test_data = pd.read_csv(load_file)\n",
     "\n",
-    "drops = category_dropout(test_data, \"Plate2_PCO_6ch_4site_10XPA\", [\"Nuclei\"], \"replicating\", \"no\", \"test.csv\")\n",
+    "drops = category_dropout(test_data, \"Plate2_PCO_6ch_4site_10XPA\", [\"Nuclei\", \"Cells\"], \"replicating\", \"no\", \"test.csv\")\n",
     "\n",
     "# ['Nuclei','Cells','Cytoplasm']\n"
    ]
@@ -3051,7 +3057,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('jump-scope': conda)",
+   "display_name": "Python 3.8.13 ('jump-scope')",
    "language": "python",
    "name": "python3"
   },
@@ -3070,7 +3076,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "18f47f3723cf2fddf1495de94a3c5370dabc4cbabc5b6bd6a88b9f69f9e68cc0"
+    "hash": "73b280186f56a0e7e1261797cbe1e0ce90ada53c728d4589dcde7f990cc23cb6"
    }
   }
  },
