adding clarification comments on loading data limitations

--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2751,16 +2751,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already tried ['()', \"('Nuclei',)\", \"('Cells',)\", \"('Nuclei', 'Cells')\"]. Skipping.\n",
-      "[]\n",
-      "All combinations already computed\n"
+      "Already tried ['()', \"('Nuclei',)\"]. Skipping.\n",
+      "---- Dropping: ('Cells',) ----\n",
+      "---- Dropping: ('Nuclei', 'Cells') ----\n"
      ]
     }
    ],
@@ -2908,16 +2908,17 @@
     "\n",
     "    # Check if dropout has previously been performed\n",
     "    if os.path.exists(outfile):\n",
+    "        # Limitation of this implementation:\n",
+    "        # If you switch from sphering to not sphering, this will fail to \n",
+    "        # run the analysis without sphering as it only checks the 'dropout'\n",
+    "        # column combinations and not any other column (such as if sphering was T/F).\n",
     "        dropout_df = pd.read_csv(outfile)\n",
     "        rep_df_list.append(dropout_df)\n",
     "        match_df_list.append(dropout_df)\n",
     "        tried=list(dropout_df[\"dropout\"])\n",
     "        print(f\"Already tried {tried}. Skipping.\")\n",
     "        possible_combinations = [x for x in possible_combinations if str(x) not in tried]\n",
-    "        print(possible_combinations)\n",
     "        # Otherwise, dropout columns will be generated from scratch\n",
-    "    # else:\n",
-    "    #     dropout_df = pd.DataFrame()\n",
     "\n",
     "    if len(possible_combinations) == 0:\n",
     "        # Either no combinations available or they're already present in the outfile\n",
@@ -2931,7 +2932,7 @@
     "        for each_item in dropout_group:\n",
     "            # Only keep columns that don't contain the dropout\n",
     "            col_list = [x for x in input_columns if each_item not in x]\n",
-    "        print(f\"---- Dropping: {dropout_group}. ----\")\n",
+    "        print(f\"---- Dropping: {dropout_group} ----\")\n",
     "        dropped_dataframe = dataframe[col_list]\n",
     "        feature_select = do_feature_select(dropped_dataframe)\n",
     "        # return feature_select\n",
@@ -3020,7 +3021,7 @@
     "\n",
     "test_data = pd.read_csv(load_file)\n",
     "\n",
-    "drops = category_dropout(test_data, \"Plate2_PCO_6ch_4site_10XPA\", [\"Nuclei\", \"Cells\"], \"replicating\", \"no\", \"test.csv\")\n",
+    "drops = category_dropout(test_data, \"Plate2_PCO_6ch_4site_10XPA\", [\"Nuclei\"], \"replicating\", \"no\", \"test.csv\")\n",
     "\n",
     "# ['Nuclei','Cells','Cytoplasm']\n"
    ]
