collating the dropout data

--- a/enabling-sphering.ipynb
+++ b/enabling-sphering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3054,11 +3054,281 @@
     "                    )\n",
     "                    print(f\"Saving in: {save_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'save_csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/ubuntu/jump-scope/jump-scope-analysis/enabling-sphering.ipynb Cell 20'\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2243616c6c756d5f444350227d/home/ubuntu/jump-scope/jump-scope-analysis/enabling-sphering.ipynb#ch0000019vscode-remote?line=13'>14</a>\u001b[0m                     df_list\u001b[39m.\u001b[39mappend(dropout_df)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2243616c6c756d5f444350227d/home/ubuntu/jump-scope/jump-scope-analysis/enabling-sphering.ipynb#ch0000019vscode-remote?line=15'>16</a>\u001b[0m collated_dropout_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat(df_list)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2243616c6c756d5f444350227d/home/ubuntu/jump-scope/jump-scope-analysis/enabling-sphering.ipynb#ch0000019vscode-remote?line=16'>17</a>\u001b[0m collated_dropout_df\u001b[39m.\u001b[39;49msave_csv(\u001b[39m\"\u001b[39m\u001b[39mcheckpoints/feature-dropouts-nuclei_cytoplasm_cells.csv\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/jump-scope/lib/python3.8/site-packages/pandas/core/generic.py:5575\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5568\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5569\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5570\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5571\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5572\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5573\u001b[0m ):\n\u001b[1;32m   5574\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5575\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'save_csv'"
+     ]
+    }
+   ],
+   "source": [
+    "# Gather the dropout data\n",
+    "df_list = list()\n",
+    "t = pd.DataFrame()\n",
+    "_, parent_folders, _ = next(os.walk(\"../jump-scope/profiles/\"))\n",
+    "for batch_name in parent_folders:\n",
+    "    _, subdirs, _ = next(os.walk(f\"../jump-scope/profiles/{batch_name}\"))\n",
+    "    for plate_barcode in subdirs:\n",
+    "        batch_path = f\"../jump-scope/profiles/{batch_name}/{plate_barcode}\"\n",
+    "        for _, _, files in os.walk(batch_path):\n",
+    "            for filename in files:\n",
+    "                if filename.endswith(\"-dropout.csv\"):\n",
+    "                    dropout_path = f\"{batch_path}/{plate_barcode}-dropout.csv\"\n",
+    "                    dropout_df = pd.read_csv(dropout_path)\n",
+    "                    df_list.append(dropout_df)\n",
+    "\n",
+    "collated_dropout_df = pd.concat(df_list)\n",
+    "collated_dropout_df.to_csv(\"checkpoints/feature-dropouts-nuclei_cytoplasm_cells.csv\")\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collated_dropout_df = pd.concat(df_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>assay_plate_barcode</th>\n",
+       "      <th>num_features</th>\n",
+       "      <th>dropout</th>\n",
+       "      <th>remaining</th>\n",
+       "      <th>n_columns</th>\n",
+       "      <th>sphering</th>\n",
+       "      <th>percent_replicating</th>\n",
+       "      <th>percent_matching</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>413</td>\n",
+       "      <td>('Cytoplasm',)</td>\n",
+       "      <td>['Nuclei', 'Cells']</td>\n",
+       "      <td>2916</td>\n",
+       "      <td>True</td>\n",
+       "      <td>61.111111</td>\n",
+       "      <td>16.279070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>413</td>\n",
+       "      <td>('Cytoplasm',)</td>\n",
+       "      <td>['Nuclei', 'Cells']</td>\n",
+       "      <td>2916</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28.888889</td>\n",
+       "      <td>13.953488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>450</td>\n",
+       "      <td>('Cells',)</td>\n",
+       "      <td>['Nuclei', 'Cytoplasm']</td>\n",
+       "      <td>2902</td>\n",
+       "      <td>True</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>20.930233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>450</td>\n",
+       "      <td>('Cells',)</td>\n",
+       "      <td>['Nuclei', 'Cytoplasm']</td>\n",
+       "      <td>2902</td>\n",
+       "      <td>False</td>\n",
+       "      <td>27.777778</td>\n",
+       "      <td>16.279070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plate3_PCO_6ch_4site_10XPA_Crest</td>\n",
+       "      <td>450</td>\n",
+       "      <td>('Nuclei', 'Cells')</td>\n",
+       "      <td>['Cytoplasm']</td>\n",
+       "      <td>2902</td>\n",
+       "      <td>True</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>23.255814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P3</td>\n",
+       "      <td>402</td>\n",
+       "      <td>('Cells', 'Cytoplasm')</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2360</td>\n",
+       "      <td>False</td>\n",
+       "      <td>51.111111</td>\n",
+       "      <td>18.604651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P3</td>\n",
+       "      <td>416</td>\n",
+       "      <td>('Nuclei', 'Cells')</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.333333</td>\n",
+       "      <td>18.604651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P3</td>\n",
+       "      <td>416</td>\n",
+       "      <td>('Nuclei', 'Cells')</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>False</td>\n",
+       "      <td>51.111111</td>\n",
+       "      <td>16.279070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P3</td>\n",
+       "      <td>402</td>\n",
+       "      <td>('Nuclei', 'Cells', 'Cytoplasm')</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2360</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.333333</td>\n",
+       "      <td>18.604651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>CP_Broad_Phenix_NC_BIN1_P3</td>\n",
+       "      <td>402</td>\n",
+       "      <td>('Nuclei', 'Cells', 'Cytoplasm')</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2360</td>\n",
+       "      <td>False</td>\n",
+       "      <td>52.222222</td>\n",
+       "      <td>18.604651</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2940 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 assay_plate_barcode  num_features  \\\n",
+       "0   Plate3_PCO_6ch_4site_10XPA_Crest           413   \n",
+       "1   Plate3_PCO_6ch_4site_10XPA_Crest           413   \n",
+       "2   Plate3_PCO_6ch_4site_10XPA_Crest           450   \n",
+       "3   Plate3_PCO_6ch_4site_10XPA_Crest           450   \n",
+       "4   Plate3_PCO_6ch_4site_10XPA_Crest           450   \n",
+       "..                               ...           ...   \n",
+       "11        CP_Broad_Phenix_NC_BIN1_P3           402   \n",
+       "12        CP_Broad_Phenix_NC_BIN1_P3           416   \n",
+       "13        CP_Broad_Phenix_NC_BIN1_P3           416   \n",
+       "14        CP_Broad_Phenix_NC_BIN1_P3           402   \n",
+       "15        CP_Broad_Phenix_NC_BIN1_P3           402   \n",
+       "\n",
+       "                             dropout                remaining  n_columns  \\\n",
+       "0                     ('Cytoplasm',)      ['Nuclei', 'Cells']       2916   \n",
+       "1                     ('Cytoplasm',)      ['Nuclei', 'Cells']       2916   \n",
+       "2                         ('Cells',)  ['Nuclei', 'Cytoplasm']       2902   \n",
+       "3                         ('Cells',)  ['Nuclei', 'Cytoplasm']       2902   \n",
+       "4                ('Nuclei', 'Cells')            ['Cytoplasm']       2902   \n",
+       "..                               ...                      ...        ...   \n",
+       "11            ('Cells', 'Cytoplasm')                      NaN       2360   \n",
+       "12               ('Nuclei', 'Cells')                      NaN       2345   \n",
+       "13               ('Nuclei', 'Cells')                      NaN       2345   \n",
+       "14  ('Nuclei', 'Cells', 'Cytoplasm')                      NaN       2360   \n",
+       "15  ('Nuclei', 'Cells', 'Cytoplasm')                      NaN       2360   \n",
+       "\n",
+       "    sphering  percent_replicating  percent_matching  \n",
+       "0       True            61.111111         16.279070  \n",
+       "1      False            28.888889         13.953488  \n",
+       "2       True            60.000000         20.930233  \n",
+       "3      False            27.777778         16.279070  \n",
+       "4       True            60.000000         23.255814  \n",
+       "..       ...                  ...               ...  \n",
+       "11     False            51.111111         18.604651  \n",
+       "12      True            63.333333         18.604651  \n",
+       "13     False            51.111111         16.279070  \n",
+       "14      True            63.333333         18.604651  \n",
+       "15     False            52.222222         18.604651  \n",
+       "\n",
+       "[2940 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collated_dropout_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('jump-scope')",
+   "display_name": "Python 3.8.13 ('jump-scope': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -3077,7 +3347,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "73b280186f56a0e7e1261797cbe1e0ce90ada53c728d4589dcde7f990cc23cb6"
+    "hash": "18f47f3723cf2fddf1495de94a3c5370dabc4cbabc5b6bd6a88b9f69f9e68cc0"
    }
   }
  },
